adjusted hover css, fixed render issues with scaled card, wrapped renderCard, completed symbol selector

--- a/index.css
+++ b/index.css
@@ -252,6 +252,9 @@ input[type='radio'], input[type='checkbox'], .hidden {
 	#card input[type='text']:hover {
 		outline: 1px dashed gray;
 	}
+	#card input[type='text']:focus {
+		outline: none;
+	}
 	#card .bubble.prospective:after {
 		box-shadow: inset 0 0 6px black;
 	}
@@ -319,12 +322,23 @@ input[type='radio'], input[type='checkbox'], .hidden {
 /* Infobox Symbols */
 
 .move-icons {
-	width: 20px;
+	min-width: 20px;
 	height: 20px;
 	display: inline-block;
-	outline: 1px dashed gray;
 	margin: 5px;
 	cursor: pointer;
+}
+.move-icons:empty {
+	outline: 1px dashed gray;
+}
+
+.move-icons img {
+	max-width: 20px;
+	max-height: 20px;
+	margin: 0 2px;
+}
+.move-icons.target img {
+	outline: 1px dashed gray;
 }
 
 #info-sp {
@@ -365,12 +379,23 @@ input[type='radio'], input[type='checkbox'], .hidden {
 .symbol:first-child {
 	clear: left;
 }
+
 .symbol img {
 	max-width: 100%;
 	max-height: 100%;
 	filter: drop-shadow(0 0 1px white);
 }
+
 @media (pointer: fine) {
+	.move-icons:hover, .move-icons.target:empty:hover {
+		outline: 1px dashed gray;
+	}
+	.move-icons.target:hover {
+		outline: none;
+	}
+	.move-icons.target img:hover {
+		outline: 2px solid red;
+	}
 	.symbol:hover {
 		background: white;
 	}
@@ -408,6 +433,7 @@ input[type='radio'], input[type='checkbox'], .hidden {
 
 .menu {
 	float: left;
+	position: relative;
 	padding: 10px;
 }
 
